--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,13 @@
 <html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <link id="favicon" rel="shortcut icon" type="image/png" href="data:image/png;base64,....==" />
+    <meta name="viewport" content="width=device-width">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
     <title>FreeCycle</title>
     <style>
 
@@ -11,7 +17,11 @@
    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <h1>FreeCycle</h1>
+  <nav class="navbar navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Free Cycle</a>
+    </div>
+  </nav>
     <div id="app">
       <form @:submit.prevent="create_item">
         <label>UserName : </label>
@@ -34,19 +44,31 @@
         <button data-action="create_item" type="submit">Submit</button>
       </form>
 
-      <ul>
-        <li v-for="item in items">
-          <span data-field="id">{{item.id}}</span>
-          <span>{{item.user_id}}</span>
-          <span>{{item.keywords}}</span>
-          <img :src="item.image">
-          <span>{{item.lat}}</span>
-          <span>{{item.lon}}</span>
-          <span>{{item.date_from}}</span>
-          <span>{{item.description}}</span>
-          <button @click="delete_item(item.id)" data-action="delete">Delete</button>
-        </li>
-      </ul>
+      <div class="container my-3" style="display:inline-block ;">
+        <ul style="list-style: none;">
+          <li v-for="item in items">
+            <div class="row">
+              <div class="col-sm">
+                  <div class="card border-primary mb-3" style="max-width: 18rem;">
+                    <img :src="item.image" class="card-img-top">
+                    <div class="card-body">
+                      <h5 class="card-title"> User Id: {{item.user_id}}</h5>
+                      <p data-field="id"> List Id: {{item.id}}</p>
+                      <p class="card-text"> Keyword: {{item.keywords}}</p>
+                      <p class="card-text">Lat: {{item.lat}}</p>
+                      <p class="card-text">Lon: {{item.lon}}</p>
+                      <p class="card-text">Date: {{item.date_from}}</p>
+                      <p class="card-text">Description: {{item.description}}</p>
+                      <button @click="delete_item(item.id)" data-action="delete" class="btn btn-primary">Delete</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    
     
     </div>
     <script type="module">
