--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
       .card{
         width: 18rem;
         margin: 5px;
+      }
+      li{
         display:inline-block;
       }
 
@@ -61,7 +63,7 @@
         <label class="col-sm-1 col-form-label">Description : </label>
         <textarea v-model="item.description" name="description" placeholder="Description"></textarea>
       </div>
-      <div class="form-group mx-sm-3 mb-2">
+      <div class="form-group mx-md-3 mb-2">
         <button data-action="create_item" type="submit" class="btn btn-primary mb-3">Submit</button>
       </div>
       </form>
